# libvomid

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Makefile  configure  do-tests  file-id  gen-mid.sh  gen-shortnames  reg-tests
cmake/: parse_arguments.cmake  process_tests.cmake  require_c99.cmake
doc/: midi.md
examples/: play.c
include/: stdint_wrap.h  vomid.h  vomid_local.h  vomid_shortnames.h  vomid_test.h
mk/: alsa.c  common.mk  debug.mk  posix.c  prefix.mk  release.mk  win32.c
src/: bst.c  channel.c  config.h.in  export.c  file.c  hal.c  hal_alsa.c  hal_posix.c  hal_win32.c  import.c  map.c  midi.c  note.c  notesystem.c  play.c  pool.c  stack.c  track.c
test/: bst.c  file.c  import.c  map.c  native-check.c  test.c  tester.c  track.c
test/data/: map-eq
test/data/bst/: random-1.in  random-5.in  random-dense-1.in  random-dense-2.in
test/data/file/: test.measures.out  test.out
test/data/import/: file-out.ctrl.out  file-out.in  file-out.notes.out  invalid.ctrl.out  invalid.export.out  invalid.in  invalid.notes.out  small-but-tricky.gen-mid.ctrl.out  small-but-tricky.gen-mid.export.out  small-but-tricky.gen-mid.in  small-but-tricky.gen-mid.notes.out
test/data/map/: test.in  test.out
test/data/native-check/: 01-Schizophrenia-native.mid.in  01-Schizophrenia.mid.in  01-Schizophrenia.mid.out
test/mid/Plato Leng/: 01-Schizophrenia.mid  (+7 more)
tests/: CMakeLists.txt  main.c
tests/bst/: CMakeLists.txt  common.c  common.h  erase.c  revert.c  search.c  setup.c  teardown.c  traversal.c  update.c
tests/bst-noinput/: CMakeLists.txt  inserterase.c
(+35 files in other folders)
